; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_util.c_c_order.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_util.c_c_order.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @c_order to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @c_order(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @is_digit(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %6, %1
  store i32 0, i32* %2, align 4
  br label %22

11:                                               ; preds = %6
  %12 = load i32, i32* %3, align 4
  %13 = icmp sge i32 %12, 97
  br i1 %13, label %14, label %19

14:                                               ; preds = %11
  %15 = load i32, i32* %3, align 4
  %16 = icmp sle i32 %15, 122
  br i1 %16, label %17, label %19

17:                                               ; preds = %14
  %18 = load i32, i32* %3, align 4
  store i32 %18, i32* %2, align 4
  br label %22

19:                                               ; preds = %14, %11
  %20 = load i32, i32* %3, align 4
  %21 = add nsw i32 %20, 65536
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %19, %17, %10
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i64 @is_digit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
